--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongodb": "^5.3.0"
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.1.0",
+    "mongoose-unique-validator": "^4.0.0"
   }
 }
